<resources>
    <string name="app_name">Marvel</string>
    <string name="title_box">title box</string>
    <string name="login_description">Welcome to the Marvel HQs</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login_fields_box">Login fields box</string>
    <string name="remember">Remember</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="person_add_background">Person add background</string>
    <string name="person_add">Person add</string>
    <string name="comic_poster">Comic poster</string>
    <string name="published">Published:</string>
    <string name="price">Price:</string>
    <string name="character_thumbnail">Character thumbnail</string>

    <!--PATTERNS-->
    <string name="price_pattern">$ %1$s</string>
    <string name="comic_number_pattern">#%1$s</string>

    <!--VALIDATION MESSAGE-->
    <string name="invalid_email">E-mail invalid (pattern doesn\'t match)</string>
    <string name="invalid_password_minimum">Password invalid (value is too short)</string>
    <string name="invalid_name_minimum">Name invalid (value is too short)</string>
    <string name="pages">Pages:</string>
    <string name="back_button">Back button</string>

</resources>